--- a/miniprogram/pages/watchOrder/index.wxml
+++ b/miniprogram/pages/watchOrder/index.wxml
@@ -1,89 +1,65 @@
 <wxs src="../format.wxs" module="filter" />
 <cu-custom bgColor="bg-white" isBack="{{false}}">
-    <view slot="backText">返回</view>
-    <view slot="content">听单</view>
+  <view slot="backText">返回</view>
+  <view slot="content">听单</view>
 </cu-custom>
 <view>
-    <!-- 数据加载，显示loading态 -->
-    <view class='cu-load load-modal' wx:if="{{isLoading}}">
-        <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
-        <view class='gray-text text-xs'>加载中...</view>
-    </view>
-    <!-- 店铺 -->
-    <!-- <shopBar bind:onShopChange="onShopChange"></shopBar> -->
+  <!-- 数据加载，显示loading态 -->
+  <view class='cu-load load-modal' wx:if="{{isLoading}}">
+    <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
+    <view class='gray-text text-xs'>加载中...</view>
+  </view>
+  <!-- 店铺 -->
+  <!-- <shopBar bind:onShopChange="onShopChange"></shopBar> -->
 
-    <!-- 数据加载完毕 -->
-    <block wx:if="{{ !isLoading }}">
-        <!-- 有数据 -->
-        <view wx:if="{{ orderList.length >= 1 }}">
-
-            <!-- <view class="cu-card">
-                <view class="cu-item shadow">
-                    <view class="cu-tag bg-blue"> 最新订单</view>
-                    <view class="cu-list menu-avatar">
-                        <view wx:if="{{newOrder}}" class="cu-item">
-                            <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
-                            <view class="content flex-sub">
-                                <view class="text-grey">{{ goodsDetail.title }}</view>
-                                <view class="text-gray text-sm flex justify-between">
-                                    <view style="color: gold;">¥ {{ goodsDetail.price / 100 }}</view>
-                                    <view class="text-gray text-sm">
-                                        x{{ goodsDetail.number}}
-                                    </view>
-                                </view>
-                            </view>
+  <!-- 数据加载完毕 -->
+  <block wx:if="{{ !isLoading }}">
+    <!-- 有数据 -->
+    <view wx:if="{{ orderList.length >= 1 }}">
+      <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="getOrderList" refresher-triggered="{{isRefreshing}}">
+        <block wx:for="{{ orderList }}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index">
+          <view class="cu-card">
+            <view class="cu-item shadow">
+              <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
+                <view class="cu-list menu-avatar">
+                  <view class="cu-item">
+                    <image class="cu-avatar round lg" src="{{goodsDetail.img||'.../../images/icons/morentu.svg'}}" mode="aspectFill" />
+                    <view class="content flex-sub">
+                      <view class="text-grey">{{ goodsDetail.title }}</view>
+                      <view class="text-gray text-sm flex justify-between">
+                        <view style="color: gold;">
+                          <span class="text-price">{{filter.formatMoney(goodsDetail.price)}}</span>
                         </view>
-                        <view wx:else class="cu-item">
-                            <view class="content flex-sub">
-                                暂无最新订单
-                            </view>
+                        <view class="text-gray text-sm">
+                          x{{ goodsDetail.number}}
                         </view>
+                      </view>
                     </view>
+                  </view>
                 </view>
-            </view> -->
-
-            <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="getOrderList" refresher-triggered="{{isRefreshing}}">
-                <block wx:for="{{ orderList }}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index">
-                    <view class="cu-card">
-                        <view class="cu-item shadow">
-                            <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
-                                <view class="cu-list menu-avatar">
-                                    <view class="cu-item">
-                                        <image class="cu-avatar round lg" src="{{goodsDetail.img||'.../../images/icons/morentu.svg'}}" mode="aspectFill" />
-                                        <view class="content flex-sub">
-                                            <view class="text-grey">{{ goodsDetail.title }}</view>
-                                            <view class="text-gray text-sm flex justify-between">
-                                                <view style="color: gold;">¥ {{ goodsDetail.price / 100 }}</view>
-                                                <view class="text-gray text-sm">
-                                                    x{{ goodsDetail.number}}
-                                                </view>
-                                            </view>
-                                        </view>
-                                    </view>
-                                </view>
-                            </block>
-                            <view class="content padding flex align-center">
-                                <view>
-                                    {{filter.format(orderDetail.createDate, 'YY-MM-DD hh:mm:ss')}}
-                                </view>
-                                <view class="margin-left ">
-                                    备注：<span>{{orderDetail.remarks}}</span>
-                                </view>
-                            </view>
-                            <view class="flex">
-                                <button class="cu-btn round bg-blue" data-data="{{orderDetail}}" bind:tap="setOrderFinish">设为已完成</button>
-                            </view>
-                        </view>
-                    </view>
-                </block>
-            </scroll-view>
-        </view>
-        <!-- 无数据 -->
-        <block wx:else>
-            <view style="text-align: center;margin-top: 20vh;">
-                <image style="width: 50vw;" src="../../images/icons/no-data.svg" mode="widthFix" />
-                <view style="top: -240rpx;">暂无数据</view>
+              </block>
+              <view class="content padding flex align-center">
+                <view>
+                  {{filter.format(orderDetail.createDate, 'YY-MM-DD hh:mm:ss')}}
+                </view>
+                <view class="margin-left ">
+                  备注：<span>{{orderDetail.remarks}}</span>
+                </view>
+              </view>
+              <view class="flex">
+                <button class="cu-btn round bg-blue" data-data="{{orderDetail}}" bind:tap="setOrderFinish">设为已完成</button>
+              </view>
             </view>
+          </view>
         </block>
+      </scroll-view>
+    </view>
+    <!-- 无数据 -->
+    <block wx:else>
+      <view style="text-align: center;margin-top: 20vh;">
+        <image style="width: 50vw;" src="../../images/icons/no-data.svg" mode="widthFix" />
+        <view style="top: -240rpx;">暂无数据</view>
+      </view>
     </block>
+  </block>
 </view>
